@@ -1,8 +1,25 @@
-AUX magiccube4d-2.2-64bit-ptr.patch 1406 RMD160 41f0509ed945c3778e21081c0d184f4c230d1c2f SHA1 3671c92fb3e8c070d013d8a3bf900cdd731de6ed SHA256 05465f556602569b1e32360ffc74439bfeb4f060e4a2be9351a7ffbdfdd7623d
-AUX magiccube4d-2.2-gcc41.patch 877 RMD160 d7465f4766d60c1ba848a3bbaaf43eff992278fc SHA1 653bafd8ec124b1ffed87f1ec8def5156755aec5 SHA256 b69cc3f95795e5c7c6885bf69ffa384695fe001270e6bb3837ec39568e0c9d1a
-AUX magiccube4d-2.2-ldflags.patch 497 RMD160 3239b90e83439fce62a3e66ae33787482636dafa SHA1 13172d5a00b9ed29bf749ecb8d3f5e32ad3bbaa5 SHA256 8dd2cb5db7b8ff9156f72bfba490474cea980b45df5ebb203b481bb114da0545
-AUX magiccube4d-EventHandler.patch 425 RMD160 7def7090510bb0ff21bddfc1c392ba9629bd933d SHA1 638e816767be628ce78de04609f26228fac60f53 SHA256 6bfdc4a34d560624da46f437f66f857c259dc8cf945feb0d989f4fc3a145a98b
-DIST mc4d-src-2_2.tgz 144645 RMD160 c7bfabceb64c0c0515e94f01bcd528bd550f9b3e SHA1 dbf87d91c49f4d9d12ae814276af280c46162864 SHA256 79c7b62bbe7a132a2eacf58f92f80113ea63171d3eea59755bc828a1aa9daa44
-EBUILD magiccube4d-2.2.ebuild 1030 RMD160 aaafcfcef6b8d3b2d1fb4442eb1d1cadc077c40b SHA1 622edffae42c5b192f79eda374a144c5e6196b21 SHA256 9b4a3ebae5cf55cd8b83cc3242eef766db968e75f25b032382ad43e495c296b0
-MISC ChangeLog 1352 RMD160 e4247231b1b50a6136990ed1a501156a10988e96 SHA1 013fe83317f5171465884f8856e0614d23531260 SHA256 ee16bc3312610c6c9c0b8644dde5f8cd78aeaeaff8131da478fcf84929b93dad
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX magiccube4d-2.2-64bit-ptr.patch 1406 SHA256 05465f556602569b1e32360ffc74439bfeb4f060e4a2be9351a7ffbdfdd7623d SHA512 eb684cca4f6f02903c71e970146f6c110d9634ce2f1416e64bdf258b85264c79eaaa9b869f05ddb116373d908f4d0d2675c87d275ab79f76b21f77c5ce1c1563 WHIRLPOOL a3634b575c3f0286101c9137f1803086657ab2d7de8318d77a3d8932ffe8acd6e3c139a0287538b9d1dd1461a2f0f71b347c91616482ab5a854dd1fee8421de4
+AUX magiccube4d-2.2-gcc41.patch 877 SHA256 b69cc3f95795e5c7c6885bf69ffa384695fe001270e6bb3837ec39568e0c9d1a SHA512 e821864c45eb6effa7c613c43cb687def58fda4a770d57909498171db94a17f3f1d5e6ea8f387766eefc788500fc686167333c3c4e42d78a6ce46192d9ee9b1e WHIRLPOOL 1857f3816c7eb3ecc4c057000206ded5a9de823ac9ec5d32e1d56fa377594335c9def3d8c68edfdc6b5bd9bddcacf2b3051d0fa40d3a04da34c31442d0ab48c7
+AUX magiccube4d-2.2-ldflags.patch 497 SHA256 8dd2cb5db7b8ff9156f72bfba490474cea980b45df5ebb203b481bb114da0545 SHA512 d1dd876b8fd4a1db40cc534f828370fce679e2db666409af9923cf6e37ff08c42def867b06cf712a2d4ac4b269a0e4a4f07f6abfd797b85680d902f1f4a67e2c WHIRLPOOL 267940c444d27f53418132690c3bf0603bb9135d86bc6c88a01a7729fe876c5fa86ea2c5a93af5e76f2e36c53aa028beb00d6172e0ea20e38f8e54d69b3e090e
+AUX magiccube4d-EventHandler.patch 425 SHA256 6bfdc4a34d560624da46f437f66f857c259dc8cf945feb0d989f4fc3a145a98b SHA512 940ef99a94c1cea687196d918597785d813df30c6e15217a5a02a97cbb8b94ea67a60ed612a5974a8e2635f5b562c34acaee316d1790297166bf70112ee5db70 WHIRLPOOL a48f42e4eed583a9d952a90db74f99964eb90f64288032bfecf5338436560c764c6c0fc4b5a495e2bd2ff196c6cb284eb2d5131157005dc920a7dccded5a23eb
+DIST mc4d-src-2_2.tgz 144645 SHA256 79c7b62bbe7a132a2eacf58f92f80113ea63171d3eea59755bc828a1aa9daa44
+EBUILD magiccube4d-2.2.ebuild 1031 SHA256 8f68dd77aff9bf74db27a973e36776534361536cd51a1db0751e4b16b6c24061 SHA512 a307e534b4159bfac3d87532b37614b5dd8cbfdc93e551e4235e46c8c1f566bd848dbb0b982083de51cb8f4046180292341ca15aa1e89312f59b36d2ce85c2a8 WHIRLPOOL f12871fa9cef1ba6394aefcad96a09025283bf5cd91895166ccda05464eedb41ad6c17e88e49a944aa253da0311a7b8fe9efaf9436653c3ecc6d2479928fd3da
+MISC ChangeLog 1462 SHA256 c8e03b31d0efe1af646d51b31c4a4020d0e52d02ad78252c9dffbb35bfa05e00 SHA512 180f200ed6671efb12068811aee353b0afa36f1ce40d79fec0b415cc8a959351b797e79a5d0d1527a413bc8f2bd5708fa3a29075de34bc40ca3e051b5d566534 WHIRLPOOL db911a7834f29e339101f531a6f6b110b799a49ba4ed08ad8a1707cf47170756dbf4f4266e07ba86a0310af8d20329a56088199d0816a3238aebc1c7c6867446
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQGcBAEBCAAGBQJRalXHAAoJEJQzkH1pP7W4er0L/3pr/xc6GuqAycvu6Ux4XGuz
+4YQsu925lhX4DPpUUl4y0LmP9dLWzOXINawCt8faSdaMjJ2JVqytM0DTx3tyYJIG
+Pe0LQJQD+NNKp6+iG1E0iObpqYIC07UNsIxU6RJbgm6OdAUA/npy/Z+vrv4UJoNE
+Q1bkzRI1PJVptr4yAOAeTNUIHpK8wJ2xkFMcpQjD/vff9DUe4v/RoBPuOxUiQPzj
+/Yv0UgLH8XD4uEsmXxtYD7X8Xwes8CIxBK0/lwY1lr7KaD52PQN7I0hq01J/8y5Y
+kDQlooz3YIQPQzi/mF/kfCeVz5IqKLwBYzNYjgYFI5tNNSd/PjNfMAGkt6ypRKdn
+ZGfrCqLF3BPiARKT6dvOXLXd7GfRA5fvfIZJtBrmysb0kV2tiRRH1AD8bc84QWjF
+t856Bw9LJ2WYK5fTclh0UecUY+R5WZZcVH6NVLX5kds0QvtQMUFqom8sgN2kRRjJ
+aooKc0ZHBT2EcIqstQ8UTQJ4M75RIisAESoSjTZCPg==
+=LdGl
+-----END PGP SIGNATURE-----
