@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/magiccube4d/magiccube4d-2.2.ebuild,v 1.14 2010/10/18 15:42:39 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/magiccube4d/magiccube4d-2.2.ebuild,v 1.15 2013/04/14 07:06:52 ulm Exp $
 
 EAPI=2
 inherit eutils games
@@ -10,7 +10,7 @@ DESCRIPTION="four-dimensional analog of Rubik's cube"
 HOMEPAGE="http://www.superliminal.com/cube/cube.htm"
 SRC_URI="http://www.superliminal.com/cube/mc4d-src-${MY_PV}.tgz"
 
-LICENSE="as-is"
+LICENSE="free-noncomm"
 SLOT="0"
 KEYWORDS="~amd64 ppc x86"
 IUSE=""
