@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/magiccube4d
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/magiccube4d/ChangeLog,v 1.11 2010/10/15 08:53:26 tupone Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/magiccube4d/ChangeLog,v 1.12 2013/04/14 07:06:52 ulm Exp $
+
+  14 Apr 2013; Ulrich Müller <ulm@gentoo.org> magiccube4d-2.2.ebuild:
+  Fix LICENSE, see readme-unix.txt file.
 
   15 Oct 2010; Tupone Alfredo <tupone@gentoo.org> magiccube4d-2.2.ebuild,
   +files/magiccube4d-2.2-ldflags.patch:
